# SM-tool

./: .gitignore  CNAME  README.md  build.sh  build_files.sh  manage_sm.py  pyproject.toml  requirements.txt  vercel.json
app/: views.py
app/Data/: Tickers.csv  new_tickers.csv
app/static/css/: style.css
app/templates/: API_Down.html  Invalid_Days_Format.html  Negative_Days.html  Overflow_days.html  result.html  search.html  ticker.html
core/: settings.py  settings_sm.py  wsgi.py
env1/: pyvenv.cfg
env1/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
virtualenv/: pyvenv.cfg
virtualenv/Scripts/: activate  activate.bat
