[tool.poetry]
name = "my-poetry-project"
version = "0.1.0"
description = ""
authors = ["tools9090 <softwaresmarttool@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^1.5.1"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
