[tool.poetry]
name = "my-poetry-project"
version = "0.1.0"
description = ""
authors = ["tools9090 <softwaresmarttool@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^1.5.1"
cython = "^3.0.0"
setuptools<"60.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^20.1.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["setuptools<60.0"]
build-backend = "poetry.core.masonry.api"

